[tool.poetry]
name = "gdbundle-voltron"
version = "0.1.7.post1"
description = "gdbundle wrapper for snare/voltron"
authors = ["Tyler Hoffman <tyler@memfault.com>"]
readme = "README.md"
license = "MIT"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Plugins",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 2",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.4",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "~2.7 || ~3.4 || ~3.5 || ~3.6"
voltron = {git = "https://github.com/snare/voltron.git", rev = "bcf25d957657414d025ff488889cdef8d4fcae06"}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
